feat(router): P0+P1+P2 鲁棒规划、验收标准、语义合并与监控增强
P0 改进:
- SubTaskResult 增加 ErrorType 枚举（NONE/RETRYABLE_FAILED/FATAL_FAILED/NEED_REPLAN）
- SubTask 增加 successCriteria 字段，TaskPlanner prompt 升级 5 字段格式
- ExperienceModel 增加 ConflictStatus + supersedesId/contradictsId 冲突检测

P1 改进:
- GraphExecutionService: 指数退避重试（3次, 1s→2s→4s）+ classifyException()
- GraphExecutionService: NEED_REPLAN 检测 + TaskPlannerService.replan() 动态重规划
- ReflectionService: 新增 checkCriteria() LLM 验收标准检查
- UserProfile: 新增指数时间衰减公式 weight×e^(-λ·days)

P2 改进:
- ExperienceService: BGE 语义合并（cosine≥0.85），Milvus/pgvector/全量遍历三路降级
- RouterRagService: extractEntities()+generateBackReferences() 六类实体回指
- ToolLogAspect + NewMetricsCollector: ErrorType 分类计数器 + 延迟分位数 p50/p95/p99

共修改 12 个源文件, 新增 400+ 行, 编译验证通过